--- a/msch/package.json
+++ b/msch/package.json
@@ -1,6 +1,7 @@
 {
   "name": "msch",
   "version": "1.0.0",
+  "type": "module",
   "description": "A library to parse Mindustry schematic files.",
   "main": "index.js",
   "scripts": {
