--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A library to parse Mindustry schematic files.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine",
+		"watch": "tsc -w"
   },
   "repository": {
     "type": "git",
