--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@types/jasmine": "^5.1.4",
     "@types/node": "^20.11.0",
     "jasmine": "^5.4.0",
-    "typescript": "^5.5.0"
+    "typescript": "^5.5.0",
+    "eslint": "^9.14.0",
+		"typescript-eslint": "^8.13.0"
   },
   "files": [
     "build",
